feat(ci): sample the live heap so a deep run can name what retains it
The deep-diagnostics tier could say what ALLOCATED but never what the heap
HELD, so a run whose heap peaked well above what the event-log gauges account
for left the remainder unattributed.

The cause is that JFR's two retention instruments emit nothing under ZGC.
Verified on JDK 25 with the same program and the same JFR settings, changing
only the collector:

  jdk.ObjectCount      -> jfr view object-statistics      G1 populated, ZGC empty
  jdk.OldObjectSample  -> jfr view memory-leaks-by-class  G1 populated, ZGC empty

Enabling them explicitly changes nothing under ZGC; the JVM accepts the options
and emits no events. Adding those views to the annotation would have produced a
check that runs, passes, and reports nothing.

jcmd GC.class_histogram does work under ZGC, so sample that instead, from a JDK
sidecar joining the SUT's PID namespace. Two constraints the implementation
encodes:

  - the attach handshake needs an exact uid match; running the sidecar as root
    fails with "Unable to open socket file /tmp/.java_pid1", so the uid is read
    from the target's own /proc/1/status rather than assumed to be 65532
  - GC.class_histogram forces a full GC, so it is gated on
    PERF_JVM_DIAGNOSTICS=deep and can never run on a baselined measurement

The allocation-profile step reports the last sample in its annotation and its
sweep ladder now reaches the load where the heap is genuinely full, since a
histogram of an idle heap attributes nothing.

Also corrects the tier-2 comment block, which described this periodic jcmd
sampling as an existing capability. It was a specification, not an
implementation.

Verified end to end against a real ZGC container in a distroless-style target
(non-root, no jcmd): the sampler correctly reported 619 MB of retained byte
arrays. bash -n and shellcheck clean on both scripts.